fix: prevent data races
Use mutex locking mechanism to prevent data races when editing Documents
and setting new current positions in EditingSessions.
