# backend/docs/swagger.json
@@ -234,6 +234,15 @@
                         "name": "document_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "New content to be written",
+                        "name": "new_content",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
